ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - scheduler.ritwiksaha.com
      secretName: scheduler-ritwiksaha-com
  rules:
    - host: scheduler.ritwiksaha.com
      http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /auth
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
          - path: /graphql
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
